// pkg/api/proto/user/v1/user.proto
syntax = "proto3";

package user.v1;

option go_package = "github.com/HappyLadySauce/Beehive/pkg/api/proto/user/v1";

// UserService 提供用户数据管理相关的服务
service UserService {
    // Register 用户注册
    rpc Register(RegisterRequest) returns (RegisterResponse);
    
    // GetUser 根据用户ID获取用户信息
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    
    // GetUserByID 根据用户ID获取用户信息（供 Auth Service 调用）
    rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
    
    // UpdateUser 更新用户信息
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

// RegisterRequest 注册请求
message RegisterRequest {
    string nickname = 1;     // 昵称
    string email = 2;        // 邮箱（唯一）
    string password = 3;     // 密码
}

// RegisterResponse 注册响应
message RegisterResponse {
    string id = 1;  // 用户ID（注册后需要调用 Auth Service 的 Login 获取 token）
}

// GetUserRequest 获取用户请求
message GetUserRequest {
    string id = 1;  // 用户ID
}

// GetUserResponse 获取用户响应
message GetUserResponse {
    UserInfo user = 1;  // 用户信息
}

// GetUserByIDRequest 根据ID获取用户请求（供 Auth Service 调用）
message GetUserByIDRequest {
    string id = 1;  // 用户ID
}

// GetUserByIDResponse 根据ID获取用户响应
message GetUserByIDResponse {
    UserInfo user = 1;  // 用户信息
}

// UpdateUserRequest 更新用户请求
message UpdateUserRequest {
    string id = 1;     // 用户ID
    string nickname = 2;    // 昵称（可选）
    string avatar = 3;      // 头像URL（可选）
    string description = 4; // 描述（可选）
}

// UpdateUserResponse 更新用户响应
message UpdateUserResponse {
    UserInfo user = 1;  // 更新后的用户信息
}

// UserInfo 用户信息
message UserInfo {
    string id = 1;          // 用户ID
    string nickname = 2;    // 昵称
    string avatar = 3;      // 头像URL
    string email = 4;       // 邮箱
    string description = 5;  // 描述
    int32 level = 6;        // 等级 0-15，0表示普通用户
    string status = 7;      // 状态: online, offline, busy, idle, invisible
}
